# vaixkey

./: .gitignore  Cargo.toml  HOW_TO_VERIFY.md  KEYSTROKE_TESTING.md  README.md  SECURITY_SETUP.md  USAGE.md  entitlements.plist
.claude/: settings.local.json
src/: main.rs
src/config/: mod.rs
src/gui/: mod.rs
src/input_method/: mod.rs  telex.rs  unikey_engine.rs  vietnamese_engine.rs  vni.rs
src/keyboard/: mod.rs
